--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"SZTU 赛事成绩",
+    "subTitle":"SZTU 赛事成绩",
+    "avatarUrl":"https://s2.loli.net/2024/09/28/7YDB4kF8GMT9z1X.jpg",
     "GMEEK_VERSION":"last"
 }
