--- a/config.json
+++ b/config.json
@@ -3,4 +3,8 @@
     "subTitle":"SZTU 赛事成绩",
     "avatarUrl":"https://s2.loli.net/2024/09/28/7YDB4kF8GMT9z1X.jpg",
     "GMEEK_VERSION":"last"
+    "themeMode":"fix",
+    "dayTheme":"dark",
+    "nightTheme":"dark-blue",
+
 }
