--- a/config.json
+++ b/config.json
@@ -2,9 +2,9 @@
     "title":"SZTU 赛事成绩",
     "subTitle":"SZTU 赛事成绩",
     "avatarUrl":"https://s2.loli.net/2024/09/28/7YDB4kF8GMT9z1X.jpg",
-    "GMEEK_VERSION":"last"
+    "GMEEK_VERSION":"last",
     "themeMode":"fix",
     "dayTheme":"dark",
-    "nightTheme":"dark-blue",
+    "nightTheme":"dark-blue"
 
 }
