--- a/config.json
+++ b/config.json
@@ -5,6 +5,8 @@
     "GMEEK_VERSION":"last",
     "themeMode":"fix",
     "dayTheme":"dark",
-    "nightTheme":"dark-blue"
+    "nightTheme":"dark-blue",
+    "allHead":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekVercount.js'></script>"
+
 
 }
