--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
     "themeMode":"fix",
     "dayTheme":"dark",
     "nightTheme":"dark-blue",
+    "filingNum":"粤ICP备2024332629号",
     "allHead":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekVercount.js'></script>"
 
 
